tests/sksl/errors/golden/OpaqueTypeInArray.glsl
### Compilation failed:

error: opaque type 'sampler' may not be used in an array
error: 2: opaque type 'sampler' may not be used in an array
error: opaque type 'sampler' may not be used in an array
error: 4: opaque type 'sampler' may not be used in an array
4 errors
